--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -498,66 +498,6 @@ graffe e tilde) scrivendo queste righe nel file \filestyle{.emacs}:
 (setq ns-alternate-modifier nil)
 \end{lstlisting}
 
-\subsection{Installare AUC\TeX}
-\label{ml:sec:installauctex}
-
-Come per \emacs, non è disponibile una versione di \auctex{} già compilata per
-Mac~OS, ma purtroppo in questo caso non ne esistono neppure versioni non ufficiali. È quindi
-necessario utilizzare il programma \progstyle{make}, che viene
-installato insieme all'ambiente di sviluppo
-\href{http://developer.apple.com/technologies/tools/whats-new.html}%
-{\progstyle{Xcode}}. Chi non intende dedicare svariati GiB di disco a un software
-utile soltanto a chi sviluppa software può sfruttare il fatto che
-\progstyle{make} viene installato anche dal correttore ortografico
-\progstyle{cocoAspell}, descritto nel paragrafo~\ref{ml:sec:aspell}.
-Ecco le istruzioni.
-
-Dalla pagina relativa a Mac OS X,
-\url{http://www.gnu.org/software/auctex/download-for-macosx.html},
-bisogna scaricare l'archivio compresso \filestyle{auctex-11.87.tar.gz}.  Se ne
-estragga poi il contenuto in una cartella temporanea, si apra una sessione di
-terminale e ci si porti nella cartella appena creata.  Bisogna poi configurare
-\auctex{} con il comando
-\begin{lstlisting}[flexiblecolumns]
-$ ./configure \
- --prefix=/Applications/Emacs.app/Contents/Resources/ \
- --with-emacs=/Applications/Emacs.app/Contents/MacOS/Emacs \
- --with-lispdir=/Applications/Emacs.app/Contents/Resources \
-                  /site-lisp/ \
- --without-texmf-dir
-\end{lstlisting}
-sostituendo se necessario a \texttt{Applications}\footnote{Utilizzando il
-  terminale non bisogna utilizzare i nomi localizzati delle cartelle ma quelli
-  reali, quindi \texttt{Applications} è corretto anche se si utilizza la versione
-  italiana di Mac OS.} la cartella in cui si trova \emacs. In questo modo tutti
-i file saranno contenuti nel bundle \texttt{Emacs.app}.
-
-Infine si compili e si installi \progstyle{make} dando
-\begin{lstlisting}
-$ make && make install
-\end{lstlisting}
-
-Dopo l'installazione, bisogna impostare i visualizzatori per i vari file creati
-con \LaTeX{} scrivendo nel file \filestyle{.emacs} queste righe
-\begin{lstlisting}
-(setq TeX-view-program-list
-      '(("dvips and Skim" "%(o?)dvips %d -o &&\
-  /Applications/Skim.app/Contents/SharedSupport/\
-displayline %n %f %b")
-	("Skim" "/Applications/Skim.app/Contents/\
-SharedSupport/displayline %n %o %b")
-        ("open" "open %o")))
-(setq TeX-view-program-selection
-      '(((output-dvi style-pstricks) "dvips and Skim")
-        (output-dvi "Skim")
-        (output-pdf "Skim")
-        (output-html "open")))
-\end{lstlisting}
-Come visualizzatore si usa \progstyle{Skim},
-\url{http://skim-app.sourceforge.net/}, perché supporta la sincronizzazione tra
-sorgente e anteprima. La procedura di configurazione di \emacs{} e
-\progstyle{Skim} è descritta nel paragrafo~\ref{ml:sec:ricdirinv}.
-
 \subsection{Correttore ortografico}
 \label{ml:sec:aspell}
 
@@ -588,6 +528,63 @@ Infine si deve configurare \emacs\ aggiungendo al file
 (setq-default ispell-program-name "aspell")
 (setq ispell-dictionary "italiano")
 \end{lstlisting}
+
+\subsection{Installare AUC\TeX}
+\label{ml:sec:installauctex}
+
+Come per \emacs, non è disponibile una versione di \auctex{} già compilata per
+Mac~OS, ma purtroppo in questo caso non ne esistono neppure versioni non ufficiali. È quindi
+necessario utilizzare il programma \progstyle{make}, che viene
+installato insieme al  correttore ortografico
+\progstyle{cocoAspell}, descritto nel paragrafo~\ref{ml:sec:aspell}.
+Ecco le istruzioni.
+
+Dalla pagina relativa a Mac OS X,
+\url{http://www.gnu.org/software/auctex/download-for-macosx.html},
+bisogna scaricare l'archivio compresso \filestyle{auctex-11.87.tar.gz}.  Se ne
+estragga poi il contenuto in una cartella temporanea, si apra una sessione di
+terminale e ci si porti nella cartella appena creata.  Bisogna poi configurare
+\auctex{} con il comando
+\begin{lstlisting}[flexiblecolumns, breaklines=false]
+$ ./configure 
+--prefix=/Applications/Emacs.app/Contents/Resources/ 
+--with-emacs=/Applications/Emacs.app/Contents/MacOS/Emacs 
+--with-lispdir=/Applications/Emacs.app/Contents/Resources/site-lisp/
+--without-texmf-dir
+\end{lstlisting}
+sostituendo se necessario a \texttt{Applications}\footnote{Utilizzando il
+  terminale non bisogna utilizzare i nomi localizzati delle cartelle ma quelli
+  reali, quindi \texttt{Applications} è corretto anche se si utilizza la
+  versione italiana di Mac OS.} la cartella in cui si trova \emacs. In questo
+modo tutti i file saranno contenuti nel bundle \texttt{Emacs.app}. Il comando
+precedente deve essere scritto nel terminale su una sola riga, sostituendo le
+interruzioni di linea con spazi.
+
+Infine si compili e si installi dando
+\begin{lstlisting}
+$ make && make install
+\end{lstlisting}
+
+Dopo l'installazione, bisogna impostare i visualizzatori per i vari file creati
+con \LaTeX{} scrivendo nel file \filestyle{.emacs} queste righe
+\begin{lstlisting}
+(setq TeX-view-program-list
+      '(("dvips and Skim" "%(o?)dvips %d -o &&\
+  /Applications/Skim.app/Contents/SharedSupport/\
+displayline %n %f %b")
+	("Skim" "/Applications/Skim.app/Contents/\
+SharedSupport/displayline %n %o %b")
+        ("open" "open %o")))
+(setq TeX-view-program-selection
+      '(((output-dvi style-pstricks) "dvips and Skim")
+        (output-dvi "Skim")
+        (output-pdf "Skim")
+        (output-html "open")))
+\end{lstlisting}
+Come visualizzatore si usa \progstyle{Skim},
+\url{http://skim-app.sourceforge.net/}, perché supporta la sincronizzazione tra
+sorgente e anteprima. La procedura di configurazione di \emacs{} e
+\progstyle{Skim} è descritta nel paragrafo~\ref{ml:sec:ricdirinv}.
 
 \subsection{Sincronizzare sorgente e anteprima}
 \label{ml:sec:ricdirinv}
