chiarimento sull'inserimento di nuovi ambienti (fixes #1)

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -10,7 +10,7 @@
 %% alla pagina Internet http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \documentclass[b5paper,11pt,oneside]{guidatematica}
-\ProvidesFile{guidaemacsauctex.tex}[2013/03/25 v.1.0.0 Breve guida all'uso di
+\ProvidesFile{guidaemacsauctex.tex}[2013/04/05 v.1.0.0 Breve guida all'uso di
 Emacs per LaTeX]
 
 \usepackage{guidaemacsauctex}
@@ -696,11 +696,11 @@ Per creare un nuovo documento ci sono due modi: raggiungendo il menù
 \menu{File > Visit New File\dots} oppure premendo \verb|C-x C-f|, dopo di che
 \emacs\ chiederà di aprire/trovare un file.  Scrivendo un nome che nella
 cartella di lavoro non esiste questo file sarà creato. Dopo averlo nominato, per
-esempio \filestyle{primo.tex}, si può cominciare a scrivere in \LaTeX. Per gli
+esempio \filestyle{primo.tex}, si può cominciare a scrivere in \LaTeX.  Per gli
 amanti delle scorciatoie da tastiera (autentico punto di forza di \emacs),
-scrivendo \verb|C-c C-e| \emacs\ chiederà quale ambiente inserire.  Il cursore
-si sposterà nel \emph{minibuffer} e lì si potrà scrivere il nome dell'ambiente
-da inserire.  Questo è il messaggio visualizzato:
+scrivendo \verb|C-c C-e| potremo inserire un nuovo ambiente in modo interattivo.
+Il cursore si sposterà nel \emph{minibuffer} e lì si potrà scrivere il nome
+dell'ambiente da inserire.  Questo è il messaggio visualizzato:
 \begin{lstlisting}
 Environment type: (default document)
 \end{lstlisting}
