Corretto il nome della cartella del file init.el per XP
Come suggerito da Roberto Giacomelli, se il sistema è localizzato in
italiano la cartella su Xp del file init.el non è "Application" ma "Dati
Applicazioni". Essendo la guida rivolta ad utenti italiani era
opportuno cambiare

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -183,11 +183,11 @@ importanza per modificare il comportamento delle funzioni del programma.  Questo
 file, che sarà richiamato spesso in questo documento, presenta diversi nomi e
 localizzazioni a seconda del sistema operativo usato.  Deve essere creato perché
 inizialmente non esiste ed in particolare:
-\begin{itemize}
+\begin{itemize}[leftmargin=*]
 \item su Windows si chiama \filestyle{init.el} e va messo in
-      \begin{itemize}
+      \begin{itemize}[leftmargin=*]
       \item \verb|C:\Documents and Settings\|\meta{nome
-              utente}\verb|\Application\| (fino a XP);
+              utente}\verb|\Dati Applicazioni\| (fino a XP);
       \item \verb|C:\Users\|\meta{nome utente}\verb|\AppData\.emacs.d\init.el|
             (da Vista in poi);
       \end{itemize}
