Modifiche miste non ai contenuti

--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -1,4 +1,4 @@
-%% Copyright (C) M. Giordano, O. Iovino, M. Leccardi, 2010-2013
+%% Copyright (C) 2010-2013 M. Giordano, O. Iovino, M. Leccardi.
 %%  
 %% Quest'opera è distribuita con licenza Creative Commons,
 %%  + Attribuzione
@@ -10,16 +10,16 @@
 %% alla pagina Internet http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{guidaemacsauctex}[2013/03/11 v.1.0 Preambolo di guidaemacsauctex.tex]
+\ProvidesPackage{guidaemacsauctex}[2013/04/06 v.1.0.0 Preambolo di guidaemacsauctex.tex]
 
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
 \RequirePackage{longtable}
 
-% graphicx è caricato dalla classe
+% graphicx è caricato dalla classe guidatematica.cls
 \graphicspath{{figure/}}
 
-% listings è caricato dalla classe
+% listings è caricato dalla classe guidatematica.cls
 \lstset{
   language=lisp,
   morekeywords={add-hook,add-to-list,eval-after-load,quote,setq,setq-default},
