Si erano perse le modifiche generali :-(

--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -1,16 +1,16 @@
 %% Copyright (C) 2010-2013 M. Giordano, O. Iovino, M. Leccardi.
-%%  
+%%
 %% Quest'opera è distribuita con licenza Creative Commons,
 %%  + Attribuzione
 %%  + Non commerciale
-%%  + Condividi allo stesso modo 
+%%  + Condividi allo stesso modo
 %% 3.0 Italia.
-%%  
-%% Un riassunto in linguaggio accessibile a tutti della licenza è disponibile
-%% alla pagina Internet http://creativecommons.org/licenses/by-nc-sa/3.0/it
+%%
+%% Un riassunto della licenza in linguaggio accessibile a tutti è reperibile sul
+%% sito ufficiale http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{guidaemacsauctex}[2013/04/06 v.1.0.0 Preambolo di guidaemacsauctex.tex]
+\ProvidesPackage{guidaemacsauctex}[2013/04/06 v.1.0.1 Preambolo di guidaemacsauctex.tex]
 
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
